# binance-orderbook

./: .gitignore  main.py  pyproject.toml
examples/: live_stream.py
orderbook/: client.py  config.py
