[project]
name = "binance-orderbook"
version = "0.1.0"
description = "A high-performance real-time orderbook library for Binance"
readme = "README.MD"
requires-python = ">=3.13"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
    "sortedcontainers>=2.4",
    "pyarrow>=15.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]